--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.PlacemarkActivity" />
+        <activity android:name=".activities.PlacemarkMapsActivity" />
     </application>
 
 </manifest>
